DDF-2644 Fix overlapping links on actions view, allow scrolling on view
 - Links were being set to a fixed height, which caused overlapping (since overflow is visible by default).  Now links are allowed to wrap and height is auto.
 - Added overflow auto so the view can scroll if need be.
 - Updated map actions view to be more consistent with other views (now it has it's own css / tag).
 - General updates to actions css.

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
@@ -1,10 +1,18 @@
 @{customElementNamespace}metacard-actions {
+  overflow: auto;
   .customElement;
 
-  > a {
+  a {
     display: block;
-    height: @minimumButtonSize;
     line-height: @minimumButtonSize;
-    padding: 0px 10px;
+    padding: 0px @largeSpacing;
+  }
+
+  a {
+    margin-top: @minimumSpacing;
+  }
+
+  @{customElementNamespace}map-actions {
+    margin-top: @minimumSpacing;
   }
 }
